--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
      <style type="text/css">
         * { margin: 0; padding: 0; }
-        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; }
+        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; background: url(images/noise.jpg); }
         .clear { clear: both; }
         #page-wrap { width: 800px; margin: 40px auto 60px; }
         #pic { float: right; margin: -30px 0 0 0; }
@@ -43,8 +43,7 @@
 <div id="page-wrap"> <img alt="Photo of Cthulu" id="pic" src="images/cthulu.png" /> 
   <div id="contact-info" class="vcard">        
             <!-- Microformats! -->
-        
-            <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
+    <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
     <p><a target="_blank" href="http://www.xianhuazeng.com/en/">
        <img width="20" height="20" title="Blog" alt="Blog icon" src="images/blog.png" />
        <a target="_blank" href="http://www.linkedin.com/in/xianhuazeng">
@@ -92,7 +91,7 @@
         <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">SAS Certified Advanced Programmer for SAS 9</a>, by SAS Institute Inc. (2013)​</li> 
         <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">SAS Certified Base Programmer for SAS 9</a>, by SAS Institute Inc. (2012)​</li> 
       </ul></dd> 
-  <dd class="clear"></dd> <dt>Skills</dt>
+    <dd class="clear"></dd> <dt>Skills</dt>
      <dd><h2>Technical Interests</h2> 
       <ul> 
         <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
@@ -115,13 +114,12 @@
       </ul> </dd>
       <dd class="clear"></dd> <dt>Blogs</dt> <dd> 
       <ul> 
-        <li>Tech Blog (SAS, Statistics and Clinical Trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z博客</a></li> 
+        <li>Tech Blog (SAS, Statistics and Clinical Trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
         <li>Tech Blog (SAS, Statistics and Clinical Trials related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
       </ul></dd>
-  <div class="clear"></div> 
+    <div class="clear"></div> 
 </div> 
 <hr>
-<address></address>
 <center>Last modified: 2015-09-20</center> 
 </body>
 </html>
