--- a/index.html
+++ b/index.html
@@ -121,5 +121,8 @@
 </div> 
 <hr>
 <center>Last modified: 2015-09-20</center> 
+    <footer>
+      <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub | Copyright 2015 - {{site.time | date:"%Y"}} by <a href="http://www.xianhuazeng.com/">Xianhua Zeng</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
+    </footer>
 </body>
 </html>
