--- a/index.html
+++ b/index.html
@@ -120,9 +120,6 @@
     <div class="clear"></div> 
 </div> 
 <hr>
-<center>Last modified: 2015-09-20</center> 
-    <footer>
-      <p><small>Powered by <a href="https://github.com/mojombo/jekyll">Jekyll</a> on GitHub | Copyright 2015 - {{site.time | date:"%Y"}} by <a href="http://www.xianhuazeng.com/">Xianhua Zeng</a> | <span class="label label-info">{{site.time | date:"%Y-%m-%d %H:%M:%S"}}</span></small></p>
-    </footer>
+<center>Hosted by <a href="https://pages.github.com/">GitHub</a> | Copyright © 2015 <a href="http://www.xianhuazeng.com/" ><strong>Xianhua Zeng</strong></a> | All Rights Reserved | Last modified: 2015-09-20</center> 
 </body>
 </html>
