--- a/index.html
+++ b/index.html
@@ -120,6 +120,6 @@
     <div class="clear"></div> 
 </div> 
 <hr>
-<center>Hosted by <a href="https://pages.github.com/">GitHub</a> | Copyright © 2015 <a href="http://www.xianhuazeng.com/" ><strong>Xianhua Zeng</strong></a> | All Rights Reserved | Last modified: 2015-09-20</center> 
+<center><small>Hosted by <a href="https://pages.github.com/">GitHub</a> | Copyright © 2015 <a href="http://www.xianhuazeng.com/" >Xianhua Zeng</a> | Last modified: 2015-09-20</small></center>
 </body>
 </html>
