--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <li>QC the results and assured that a quality ADaM datasets and TLF product was delivered to the biostatistics team</li> 
         <li>Created a macro to check for issues in QC compare outputs and produce a PDF report</li> 
       </ul> </dd> 
-   <dd class="clear"></dd> <dt>Paper</dt><dd>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. present at <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</dd> 
+   <dd class="clear"></dd> <dt>Paper</dt><dd>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</dd> 
    <dd class="clear"></dd> <dt>Education</dt><dd><h2>Shanxi Medical University</h2> 
       <p><strong>M.S.:</strong>&nbsp;Epidemiology and Health Statistics<br /><strong>B.S.:</strong>&nbsp;Medical Information Management</p> </dd> 
     <dd class="clear"></dd> <dt>Certificate</dt> <dd> 
