--- a/index.html
+++ b/index.html
@@ -62,62 +62,62 @@
   <div id="objective"> 
     <p>I am an outgoing and energetic young SAS professional, self confident, creative, perseverant, have been working in the clinical trials industry for more than 2 years. I am especially skilled with CDISC guidelines including SDTM and ADaM. My squid-like head is a masterful problem solver.</p> 
   </div> 
-  <div class="clear"></div> <dl> 
-  <dd class="clear"></dd> <dt><span>Experience</span></dt> 
-    <dd> <h2><a target="_blank" href="http://www.parexel.com/">PAREXEL</a>&nbsp;<span>Statistical Programmer II - Shanghai, China - 2014/11-Present</span></h2> 
+  <div class="clear"></div>
+  <dd class="clear"></dd> <dt>Experience</dt> 
+    <dd> 
       <ul> 
-        <li>Leaded a team to complete programming and validation of SDTM datasets for a phase II study</li> 
-        <li>Attended project team meetings, worked with Bio-Statisticians, Data Operations Leader and Clinical Data Programmer as appropriate</li> 
-        <li>Represented the office in the global MAD team and PAREXEL FastLane team</li> 
-        <li>Created several macros to validate SDTM datasets</li> 
-        <li>Made some presentations at department skills sharing meeting. Topics include Aligning Column, CALL EXECUTE and Hash and Hash Iterator Objects</li> 
-        <li>Published a paper “A Macro to Add Variables to SDTM Standard Domains" in PharmaSUG China 2015, Shanghai</li>
-      </ul> 
-     <h2><a target="_blank" href="http://www.parexel.com/">PAREXEL</a>&nbsp;<span>Statistical Programmer I - Shanghai, China - 2013/4-2014/10</span></h2> 
+        <li>2014/11-Present, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
+        <li>2013/7-2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
+        <li>2013/4-2013/6, Statistical Programmer(Intern) at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
+      </ul>
+    </dd> 
+  <dd class="clear"></dd> <dt>Paper</dt>
+    <dd>
+      Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04
+    </dd> 
+  <dd class="clear"></dd> <dt>Education</dt>
+    <dd>
+      <h2>Shanxi Medical University</h2> 
+      <p><strong>M.S.:</strong>&nbsp;Epidemiology and Health Statistics<br /><strong>B.S.:</strong>&nbsp;Medical Information Management</p> 
+    </dd> 
+  <dd class="clear"></dd> <dt>Certificate</dt> 
+    <dd> 
       <ul> 
-        <li>Generated ADaM datasets, tables, figures and listings according to Protocol and SAP using&nbsp;BASE SAS, SAS/SQL, SAS/MACRO, Hash and Hash Iterator Objects, Regular Expression, SAS/GRAPH(GTL), SAS/ODS and various SAS STAT procedures (eg. PROC LOGISTIC, PROC LIFTTEST, PROC MIXED, PROC GLIMMIX&nbsp;etc.)</li> 
-        <li>Made a presentation on A Brief Introduction to Perl Regular Expressions in SAS®9 at department &nbsp;skills sharing meeting</li> 
-        <li>Created Analysis Dataset Specifications and ADaM datasets</li> 
-        <li>QC the results and assured that a quality ADaM datasets and TLF product was delivered to the biostatistics team</li> 
-        <li>Created a macro to check for issues in QC compare outputs and produce a PDF report</li> 
-      </ul> </dd> 
-   <dd class="clear"></dd> <dt>Paper</dt><dd>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</dd> 
-   <dd class="clear"></dd> <dt>Education</dt><dd><h2>Shanxi Medical University</h2> 
-      <p><strong>M.S.:</strong>&nbsp;Epidemiology and Health Statistics<br /><strong>B.S.:</strong>&nbsp;Medical Information Management</p> </dd> 
-    <dd class="clear"></dd> <dt>Certificate</dt> <dd> 
-      <ul> 
-       <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">SAS Certified Statistical Business Analyst Using SAS 9: Regression and Modeling Credential</a>, by SAS Institute Inc. (2015)</li> 
+        <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">SAS Certified Statistical Business Analyst Using SAS 9: Regression and Modeling Credential</a>, by SAS Institute Inc. (2015)</li> 
         <li><a target="_blank" href="http://support.sas.com/certify/creds/ct.html">SAS Certified Clinical Trials Programmer Using SAS 9</a>, by SAS Institute Inc. (2014)</li> 
         <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">SAS Certified Advanced Programmer for SAS 9</a>, by SAS Institute Inc. (2013)​</li> 
         <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">SAS Certified Base Programmer for SAS 9</a>, by SAS Institute Inc. (2012)​</li> 
-      </ul></dd> 
-    <dd class="clear"></dd> <dt>Skills</dt>
-     <dd><h2>Technical Interests</h2> 
-      <ul> 
-        <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
-        <li>SAS/STAT (TTEST, FREQ, UNIVARIATE, REG, ANOVA, GLM, LOGISTIC, LIFETEST, PHREG, MIXED, GLMMIX)</li> 
-        <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS Drug Development (SDD)</li> 
       </ul>
-    <h2>Programming and Script Language</h2> 
-      <p>Perl, HTML, R</p>
-    <h2>Relational Database and Operation System</h2> 
-      <ul> 
-        <li>SQL Server, Access</li> 
-        <li>Windows, Linux (Ubuntu), Unix</li> 
-      </ul>
-    <h2>Domain Knowledge</h2> 
-      <ul> 
-        <li>CDISC (CDASH, SDTM, ADaM, ODM, Define.xml)</li> 
-        <li>OpenCDISC</li> 
-        <li>Data Mining</li> 
-        <li>Credit Scoring</li> 
-      </ul> </dd>
-      <dd class="clear"></dd> <dt>Blogs</dt> <dd> 
+    </dd> 
+  <dd class="clear"></dd> <dt>Skills</dt>
+    <dd>
+      <h2>Technical Interests</h2> 
+        <ul> 
+          <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
+          <li>SAS/STAT (TTEST, FREQ, UNIVARIATE, REG, ANOVA, GLM, LOGISTIC, LIFETEST, PHREG, MIXED, GLMMIX)</li> 
+          <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS Drug Development (SDD)</li> 
+        </ul>
+      <h2>Programming and Script Language</h2> 
+        <p>Perl, Powershell, HTML, R</p>
+      <h2>Relational Database and Operation System</h2> 
+        <ul> 
+          <li>SQL Server, Access</li> 
+          <li>Windows, Linux (Ubuntu), Unix</li> 
+        </ul>
+      <h2>Domain Knowledge</h2> 
+        <ul> 
+          <li>CDISC (CDASH, SDTM, ADaM, ODM, Define.xml)</li> 
+          <li>OpenCDISC</li> 
+        </ul> 
+    </dd>
+  <dd class="clear"></dd> <dt>Blogs</dt> 
+    <dd> 
       <ul> 
         <li>Tech Blog (SAS, Statistics and Clinical Trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
         <li>Tech Blog (SAS, Statistics and Clinical Trials related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
-      </ul></dd>
-    <div class="clear"></div> 
+      </ul>
+    </dd>
+  <div class="clear"></div> 
 </div> 
 <hr>
 <center><small>Hosted by <a href="https://pages.github.com/">GitHub</a> | Copyright © 2015 <a href="http://www.xianhuazeng.com/" >Xianhua Zeng</a> | Last modified: 2015-09-20</small></center>
