--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
       <ul> 
         <li>2014/11-Present, Statistical Programmer II at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li> 
         <li>2013/7-2014/10, Statistical Programmer I at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>
-        <li>2013/4-2013/6, Statistical Programmer(Intern) at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
+        <li>2013/4-2013/6, Statistical Programmer (Intern) at <a target="_blank" href="http://www.parexel.com/">PAREXEL</a>, Shanghai, China</li>  
       </ul>
     </dd> 
   <dd class="clear"></dd> <dt>Paper</dt>
     <dd>
-      Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04
+      <ul> 
+        <li>Xianhua Zeng, Shenglin Zhagn. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
+        <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
+      </ul>
     </dd> 
   <dd class="clear"></dd> <dt>Education</dt>
     <dd>
@@ -95,26 +98,26 @@
         <ul> 
           <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
           <li>SAS/STAT (TTEST, FREQ, UNIVARIATE, REG, ANOVA, GLM, LOGISTIC, LIFETEST, PHREG, MIXED, GLMMIX)</li> 
-          <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS Drug Development (SDD)</li> 
+          <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Drug Development (SDD)</li> 
         </ul>
       <h2>Programming and Script Language</h2> 
         <p>Perl, Powershell, HTML, R</p>
       <h2>Relational Database and Operation System</h2> 
         <ul> 
           <li>SQL Server, Access</li> 
-          <li>Windows, Linux (Ubuntu), Unix</li> 
+          <li>Windows, Linux (Ubuntu)</li> 
         </ul>
       <h2>Domain Knowledge</h2> 
         <ul> 
           <li>CDISC (CDASH, SDTM, ADaM, ODM, Define.xml)</li> 
-          <li>OpenCDISC</li> 
+          <li>Pinnacle 21</li> 
         </ul> 
     </dd>
   <dd class="clear"></dd> <dt>Blogs</dt> 
     <dd> 
       <ul> 
-        <li>Tech Blog (SAS, Statistics and Clinical Trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
-        <li>Tech Blog (SAS, Statistics and Clinical Trials related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
+        <li>Tech Blog (SAS, statistics and clinical trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
+        <li>Tech Blog (SAS, statistics and clinical trials related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
       </ul>
     </dd>
   <div class="clear"></div> 
