--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
   <dd class="clear"></dd> <dt>Paper</dt>
     <dd>
       <ul> 
-        <li>Xianhua Zeng, Shenglin Zhagn. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
-        <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
+        <li>Xianhua Zeng, Shenglin Zhang. <a target="_blank" href="http://www.pharmasug.org/china/2016/abstracts.html#PR">Define.xml Content Validation - CRF Page Check</a>. <a target="_blank" href="http://www.pharmasug.org/china/index.html/">PharmaSUG China 2016</a>, Beijing, 2016/9/09</li>
+        <li>Xianhua Zeng. <a target="_blank" href="http://www.pharmasug.org/proceedings/china2015/PharmaSUG-China-2015-13.pdf">A Macro to Add Variables to SDTM Standard Domains</a>. <a target="_blank" href="http://www.pharmasug.org/china/2015/wrapup.html">PharmaSUG China 2015</a>, Shanghai, 2015/09/04</li>
       </ul>
     </dd> 
   <dd class="clear"></dd> <dt>Education</dt>
