--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
     </dd> 
   <dd class="clear"></dd> <dt>Education</dt>
     <dd>
-      <h2>Shanxi Medical University</h2> 
-      <p><strong>M.S.:</strong>&nbsp;Epidemiology and Health Statistics<br /><strong>B.S.:</strong>&nbsp;Medical Information Management</p> 
+      <ul> 
+        <li>2013/07, Master degree in Epidemiology and Health Statistics, Shanxi Medical University , Taiyuan, China</li>
+        <li>2008/07, Bachelor degree in Medical Information Management, Shanxi Medical University , Taiyuan, China</li>        
+      </ul>
     </dd> 
   <dd class="clear"></dd> <dt>Certificate</dt> 
     <dd> 
@@ -94,20 +96,20 @@
     </dd> 
   <dd class="clear"></dd> <dt>Skills</dt>
     <dd>
-      <h2>Technical Interests</h2> 
+      <b>Technical Interests</b> 
         <ul> 
           <li>SAS/BASE (Data Step, ODS, SQL, Macro, XML, Regular Expression, Hash and Hash Iterator Objects)</li> 
           <li>SAS/STAT (TTEST, FREQ, UNIVARIATE, REG, ANOVA, GLM, LOGISTIC, LIFETEST, PHREG, MIXED, GLMMIX)</li> 
           <li>SAS/GRAPH, SAS/IML, SAS/ACCESS, SAS XML Mapper, SAS Drug Development (SDD)</li> 
         </ul>
-      <h2>Programming and Script Language</h2> 
+      <b>Programming and Script Language</b> 
         <p>Perl, Powershell, HTML, R</p>
-      <h2>Relational Database and Operation System</h2> 
+      <b>Relational Database and Operation System</b> 
         <ul> 
           <li>SQL Server, Access</li> 
           <li>Windows, Linux (Ubuntu)</li> 
         </ul>
-      <h2>Domain Knowledge</h2> 
+      <b>Domain Knowledge</b> 
         <ul> 
           <li>CDISC (CDASH, SDTM, ADaM, ODM, Define.xml)</li> 
           <li>Pinnacle 21</li> 
