--- a/index.html
+++ b/index.html
@@ -125,6 +125,6 @@
   <div class="clear"></div> 
 </div> 
 <hr>
-<center><small>Hosted by <a href="https://pages.github.com/">GitHub</a> | Copyright © 2015 <a href="http://www.xianhuazeng.com/" >Xianhua Zeng</a> | Last modified: 2015-09-20</small></center>
+<center><small>Hosted by <a href="https://pages.github.com/">GitHub</a> | Last modified: 2015-09-20</small></center>
 </body>
 </html>
