--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
      <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-     <title>Xianhua Zeng | 曾宪华</title>
+     <title>Xianhua Zeng</title>
 
      <style type="text/css">
         * { margin: 0; padding: 0; }
@@ -118,8 +118,8 @@
   <dd class="clear"></dd> <dt>Blogs</dt> 
     <dd> 
       <ul> 
-        <li>Tech Blog (SAS, clinical trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
-        <li>Tech Blog (SAS, clinical trials related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
+        <li>Tech Blog (SAS and clinical trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
+        <li>Tech Blog (SAS and clinical trials related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
       </ul>
     </dd>
   <div class="clear"></div> 
