--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 
      <style type="text/css">
         * { margin: 0; padding: 0; }
-        body { font: 16px Helvetica, Sans-Serif; line-height: 24px; }
+        body { font: 16px Georgia, Sans-Serif; line-height: 24px; }
         .clear { clear: both; }
         #page-wrap { width: 800px; margin: 40px auto 60px; }
         #pic { float: right; margin: -30px 0 0 0; }
-        h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
-        h2 { font-size: 20px; margin: 0 0 6px 0; position: relative; }
-        h2 span { position: absolute; bottom: 0; right: 0; font-style: italic; font-family: Georgia, Serif; font-size: 16px; color: #999; font-weight: normal; }
+        h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-family: Helvetica, Sans-Serif; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
         p { margin: 0 0 16px 0; }
-        a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
-        a:hover { border-bottom-style: solid; color: black; }
+        a:link{ font-style: italic; color: #999; text-decoration: underline; }
+        a:hover { color: black; text-decoration: underline; }
+        a:visited { color: black; }
         ul { margin: 0 0 32px 17px; }
         #objective { width: 500px; float: left; }
         #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
-        dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
+        dt { font-family: Helvetica, Sans-Serif; font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
         dd { width: 615px; float: right; }
         dd.clear { float: none; margin: 0; height: 15px; }
      </style>
@@ -45,15 +44,15 @@
             <!-- Microformats! -->
     <h1 class="fn">Xianhua Zeng 曾宪华</h1> 
     <p><a target="_blank" href="http://www.xianhuazeng.com/en/">
-       <img width="20" height="20" title="Blog" alt="Blog icon" src="images/blog.png" />
+       <img width="20" height="20" title="Blog" alt="Blog icon" src="images/blog.png" /></a>
        <a target="_blank" href="http://www.linkedin.com/in/xianhuazeng">
-       <img width="20" height="20" title="Linkedin" alt="Linkedin icon" src="images/linkedin.png" />
+       <img width="20" height="20" title="Linkedin" alt="Linkedin icon" src="images/linkedin.png" /></a>
        <a target="_blank" href="https://github.com/xianhuazeng">
-       <img width="20" height="20" title="Github" alt="Github icon" src="images/github.png" />
+       <img width="20" height="20" title="Github" alt="Github icon" src="images/github.png" /></a>
        <a target="_blank" href="https://twitter.com/xianhuazeng">
-       <img width="20" height="20" title="Twitter" alt="Twitter icon"  src="images/twitter.png" />
+       <img width="20" height="20" title="Twitter" alt="Twitter icon"  src="images/twitter.png" /></a>
        <a target="_blank" href="http://www.facebook.com/huazizeng">
-       <img width="20" height="20" title="Facebook" alt="Facebook icon" src="images/facebook.png" />
+       <img width="20" height="20" title="Facebook" alt="Facebook icon" src="images/facebook.png" /></a>
        <a target="_blank" href="http://plus.google.com/u/0/106689784596989502614/about">
        <img width="20" height="20" title="Google+" alt="Google+ icon" src="images/google.png" /></a><br />        
          Email:&nbsp;<a href="mailto:huazizeng@gmail.com"><img border="0" alt="" src="images/email.png" /></a>
