--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
      <style type="text/css">
         * { margin: 0; padding: 0; }
-        body { font: 16px Georgia, Sans-Serif; line-height: 24px; }
+        body { font: 16px Georgia, Serif; line-height: 24px; }
         .clear { clear: both; }
         #page-wrap { width: 800px; margin: 40px auto 60px; }
         #pic { float: right; margin: -30px 0 0 0; }
         h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-family: Helvetica, Sans-Serif; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
         p { margin: 0 0 16px 0; }
-        a:link{ font-style: italic; color: #999; text-decoration: underline; }
+        a { font-style: italic; color: #999; text-decoration: underline; }
         a:hover { color: black; text-decoration: underline; }
         a:visited { color: black; }
         ul { margin: 0 0 32px 17px; }
         #objective { width: 500px; float: left; }
-        #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
+        #objective p { font-style: italic; color: #666; }
         dt { font-family: Helvetica, Sans-Serif; font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 80px; border-right: 1px solid #999;  }
         dd { width: 615px; float: right; }
         dd.clear { float: none; margin: 0; height: 15px; }
