--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         #pic { float: right; margin: -30px 0 0 0; }
         h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-family: Helvetica, Sans-Serif; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
         p { margin: 0 0 16px 0; }
-        a { font-style: italic; color: #999; text-decoration: underline; }
+        a:link { font-style: italic; color: #999; text-decoration: underline; }
         a:hover { color: black; text-decoration: underline; }
         a:visited { color: black; }
         ul { margin: 0 0 32px 17px; }
