--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </p> 
   </div> 
   <div id="objective"> 
-    <p>I am an outgoing and energetic young SAS professional, self confident, creative, perseverant, have been working in the clinical trials industry for more than 2 years. I am especially skilled with CDISC guidelines including SDTM and ADaM. My squid-like head is a masterful problem solver.</p> 
+    <p>I'm an outgoing and energetic young SAS professional, self confident, creative, perseverant, have been working in the clinical trials industry for more than 2 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.</p> 
   </div> 
   <div class="clear"></div>
   <dd class="clear"></dd> <dt>Experience</dt> 
