--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   <dd class="clear"></dd> <dt>Education</dt>
     <dd>
       <ul> 
-        <li>2013/07, Master degree in Epidemiology and Health Statistics, Shanxi Medical University , Taiyuan, China</li>
-        <li>2008/07, Bachelor degree in Medical Information Management, Shanxi Medical University , Taiyuan, China</li>        
+        <li>2013/07, Master degree in Epidemiology and Health Statistics, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>
+        <li>2008/07, Bachelor degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>        
       </ul>
     </dd> 
   <dd class="clear"></dd> <dt>Certificate</dt> 
