--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         #pic { float: right; margin: -30px 0 0 0; }
         h1 { margin: 0 0 16px 0; padding: 0 0 16px 0; font-family: Helvetica, Sans-Serif; font-size: 42px; font-weight: bold; letter-spacing: -2px; border-bottom: 1px solid #999; }
         p { margin: 0 0 16px 0; }
-        a:link { font-style: italic; color: #999; text-decoration: underline; }
-        a:hover { color: black; text-decoration: underline; }
-        a:visited { color: black; }
+        a:link {color:#dd0000;text-decoration:none;}
+        a:hover {color:#333333;text-decoration:underline;}
+        a:visited { color:#333333; }
         ul { margin: 0 0 32px 17px; }
         #objective { width: 500px; float: left; }
         #objective p { font-style: italic; color: #666; }
