--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     </p> 
   </div> 
   <div id="objective"> 
-    <p>I'm an outgoing and energetic young SAS professional, self confident, creative, perseverant, have been working in the clinical trials industry for more than 2 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently.</p> 
+    <p>
+      I'm an outgoing, creative and energetic young SAS professional, have been working in the clinical trials industry for more than 2 years. I love programming and I'm extremely enthusiastic about new technologies. I'm always actively seeking out new and better approaches that help me work more efficiently. My squid-like head is a masterful problem solver.
+    </p> 
   </div> 
   <div class="clear"></div>
   <dd class="clear"></dd> <dt>Experience</dt> 
