--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
   <dd class="clear"></dd> <dt>Certificate</dt> 
     <dd> 
       <ul> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">SAS Certified Statistical Business Analyst Using SAS 9: Regression and Modeling Credential</a>, by SAS Institute Inc. (2015)</li> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/ct.html">SAS Certified Clinical Trials Programmer Using SAS 9</a>, by SAS Institute Inc. (2014)</li> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">SAS Certified Advanced Programmer for SAS 9</a>, by SAS Institute Inc. (2013)​</li> 
-        <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">SAS Certified Base Programmer for SAS 9</a>, by SAS Institute Inc. (2012)​</li> 
+        <li><a target="_blank" href="http://support.sas.com/certify/creds/sba.html">Statistical Business Analyst Using SAS 9: Regression and Modeling Credential</a>, certified by SAS Institute Inc. (2015)</li> 
+        <li><a target="_blank" href="http://support.sas.com/certify/creds/ct.html">Clinical Trials Programmer Using SAS 9 Credential</a>, certified by SAS Institute Inc. (2014)</li> 
+        <li><a target="_blank" href="http://support.sas.com/certify/creds/ap.html">Advanced Programmer for SAS 9 Credential</a>, certified by SAS Institute Inc. (2013)​</li> 
+        <li><a target="_blank" href="http://support.sas.com/certify/creds/bp.html">Base Programmer for SAS 9 Credential</a>, certified by SAS Institute Inc. (2012)​</li> 
       </ul>
     </dd> 
   <dd class="clear"></dd> <dt>Skills</dt>
