--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
   <dd class="clear"></dd> <dt>Education</dt>
     <dd>
       <ul> 
-        <li>2013/07, Master degree in Epidemiology and Health Statistics, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>
-        <li>2008/07, Bachelor degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>        
+        <li>2013/07, Master Degree in Epidemiology and Health Statistics, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>
+        <li>2008/07, Bachelor Degree in Medical Information Management, <a target="_blank" href="http://www.sxmu.edu.cn/">Shanxi Medical University</a>, Taiyuan, China</li>        
       </ul>
     </dd> 
   <dd class="clear"></dd> <dt>Certificate</dt> 
@@ -118,8 +118,8 @@
   <dd class="clear"></dd> <dt>Blogs</dt> 
     <dd> 
       <ul> 
-        <li>Tech Blog (SAS and clinical trials related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
-        <li>Tech Blog (SAS and clinical trials related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
+        <li>Tech Blog (SAS and Clinical Trials Related, in Chinese)<a target="_blank" href="http://www.xianhuazeng.com/cn/"> 老Z的博客</a></li> 
+        <li>Tech Blog (SAS and Clinical Trials Related, in English)<a target="_blank" href="http://www.xianhuazeng.com/en/"> Clinical SAS Programming</a></li> 
       </ul>
     </dd>
   <div class="clear"></div> 
